2017-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (read_storage_identlist): Prefer ident to
	  keyword

2017-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: Fix client compression hang

2017-10-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Fix parsing of psql version for version
	  10.0

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2.pm: New Catalog2
	* perl/Amanda/DB/Catalog2/SQLite.pm: New Catalog2 SQlite driver
	* server-src/amcatalog.pl: Program to accessthe Catalog2
	* installcheck/DB_Catalolog2/amdump.catalog.1: Test catalog
	* installcheck/Amanda_DB_Catalog2_SQLite.pl: Test it
	* installcheck/Installcheck/DBCatalog2.pm: Test it

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/Makefile.am: Add amanda-catalog.7 and amcatalog.8
	* man/xml-source/amanda-catalog.7.xml: New page to describe the
	  catalog available
	* man/xml-source/amanda.8.xml: Link to amanda-catalog
	* man/xml-source/amanda.conf.5.xml: Explian catalog section
	* man/xml-source/amcatalog.8.xml: New page for amcatlog program

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add catalog section in configuration file
	* common-src/conffile.c: Add catalog section
	* common-src/conffile.h: Add catalog section
	* perl/Amanda/Config.swg: Add catalog section
	* installcheck/Amanda_Rest_Configs.pl: Test it

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	Move RententionType from tapefile to conffile
	* common-src/conffile.h: Add RetentionType
	* perl/Amanda/Config.swg: Add RetentionType
	* perl/Amanda/Tapelist.swg: Remove RetentionType
	* server-src/tapefile.h:Remove RetentionType
	* perl/Amanda/Rest/Labels.pm, perl/Amanda/Rest/Storages.pm,
	  server-src/amadmin_perl.pl, server-src/amtape.pl: Use RetentionType
	  from config

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>