@@ -89,7 +89,7 @@ typedef struct shm_ring_t {
 extern GMutex *shm_ring_mutex;
 
 int shm_ring_sem_wait(shm_ring_t *shm_ring, sem_t *sem);
-shm_ring_t *shm_ring_create(void);
+shm_ring_t *shm_ring_create(char **errmsg);
 shm_ring_t *shm_ring_link(char *name);
 void shm_ring_to_security_stream(shm_ring_t *shm_ring, struct security_stream_t *netfd, crc_t *crc);
 void shm_ring_consumer_set_size(shm_ring_t *shm_ring, ssize_t ring_size, ssize_t block_size);
